# suitesparse-downloader

./: README.md  datasets.py  download.py  list.py  lists.py  load-env.sh  pyproject.toml  requirements.txt  unused.py
lib/: config.py  datasets.py  dtypes.py  lists.py  matrix.py
scripts/: remove_dir_with_match.sh
