[tool.poetry]
name = "ss-downloader"
version = "0.1.0"
description = ""
authors = ["Carl Pearson <cwpears@sandia.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
ssgetpy = "^1.0rc2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
