[tool.poetry]
name = "ss-downloader"
version = "0.1.0"
description = ""
authors = ["Carl Pearson <cwpears@sandia.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
ssgetpy = {git = "https://github.com/cwpearson/ssgetpy.git", rev = "be00d2a"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
